# PrismCore

./: .env  .gitattributes  .gitignore  AGENTS.md  App.xaml  App.xaml.cs  CLAUDE.md  CONTRIBUTING.md  MIGRATION_TO_CSHARP.md  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PrismCore.csproj  PrismCore.spec  Program.cs  README-en.md  README.md  VERSION.md  app.manifest  build-pack.sh  main.py  pyproject.toml
.aiassistant/rules/: 主规则.md
.claude/: settings.local.json
.github/: release-body-footer.md
.github/scripts/: cleanup-dev.sh  prepare-beta.sh  prepare-master.sh  versionmd.sh
.github/workflows/: beta-release.yml  build.yml  ci.yml  junie-code-review.yml  junie-secret-audit.yml  junie.yml  release.yml
Helpers/: AutoStartHelper.cs  Constants.cs  NativeApi.cs  PrivilegeHelper.cs  ProcessHelper.cs  TrayIcon.cs  UpdateService.cs
Models/: AnomalyDetector.cs  AppSettings.cs  AutoOptimizer.cs  Cleaner.cs  LatencyMonitor.cs  MemoryManager.cs  MftScanner.cs  NetworkTools.cs  ProBalanceEngine.cs  ProcessManager.cs  StartupManager.cs  SystemCleaner.cs  SystemInfo.cs
Properties/: launchSettings.json
Properties/PublishProfiles/: FolderProfile.pubxml
ViewModels/: CleanerViewModel.cs  DashboardViewModel.cs  OptimizerViewModel.cs  ToolboxViewModel.cs  UpdateViewModel.cs
Views/: CleanerPage.xaml  CleanerPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  OptimizerPage.xaml  OptimizerPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ToolboxPage.xaml  ToolboxPage.xaml.cs  UpdatePage.xaml  UpdatePage.xaml.cs
src/: app.py
src/models/: anomaly.py  (+12 more)
(+13 files in other folders)
